引入泛型和面向对象理念
