# controller/user/register.go
@@ -1,7 +1,6 @@
 package user
 
 import (
-	"github.com/LyonNee/app-layout/logic"
 	"github.com/LyonNee/app-layout/pkg/response"
 	"github.com/gin-gonic/gin"
 )
@@ -14,21 +13,22 @@ type RegisterIM struct {
 }
 
 // Login
-// @Summary      登录
-// @Description  通过账户密码登录
-// @Tags         user
-// @Accept       json
-// @Produce      json
-// @Param        RegisterIM  body  RegisterIM  true  "register input model"
-// @Router       /user/session [post]
-func registerHandler(ctx *gin.Context) {
+// @Summary     注册
+// @Description 输入账户密码用户信息注册
+// @Tags        user
+// @Accept      json
+// @Produce     json
+// @Param       RegisterIM body RegisterIM true "register input model"
+// @Success     200     {object} response.Response[string]
+// @Router      /user/user [post]
+func (c *UserController) registerHandler(ctx *gin.Context) {
 	var input RegisterIM
 	if err := ctx.ShouldBind(&input); err != nil {
 		response.Fail(ctx, response.CODE_INVALID_BODY_ARGUMENT, "")
 		return
 	}
 
-	uid, err := logic.Register(ctx.Request.Context(), input.Name, input.Age, input.PhoneNumber, input.Password)
+	uid, err := c.UserLogic.Register(ctx.Request.Context(), input.Name, input.Age, input.PhoneNumber, input.Password)
 	if err != nil {
 		response.Fail(ctx, response.CODE_PROCESSING_REQUEST_FAILURE, "")
 		return
